--- a/students/alicia-yu.html
+++ b/students/alicia-yu.html
@@ -15,9 +15,9 @@
           <img class="learn-logo" src="https://s3.amazonaws.com/learn-verified/logo.png"/>
         </a>
       </header>
-      <a href="https://imgur.com/2LxYO6A"><img src="https://i.imgur.com/2LxYO6A.jpg" title="source: imgur.com" /></a> /* Profile Banner */
+      <div class="profile-banner" id="alicia-yu-cover"></div>
       <div class="vitals-container">
-        <a href="https://imgur.com/Pd4MqMP"><img src="https://i.imgur.com/Pd4MqMP.jpg" title="source: imgur.com" /></a> /*Profile Photo */
+        <div class="profile-photo" id="alicia-yu-card"></div>
         <div class="social-icon-container">
           <a href="http://www.github.com/aliciayu"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
  -        <a href="https://www.linkedin.com/in/alicia-yu-2b69546b"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
